[package]
name = "pgm-rs"
version = "0.1.0"
edition = "2024"
description = "A PGM index implementation for sorted u64 keys"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/GavinClarke0/pgm-rs"
keywords = ["pgm", "index", "data-structure"]
categories = ["data-structures", "algorithms"]

[dependencies]
rkyv = "0.8.10"
rkyv_derive = "0.8.1"
thiserror = "2.0.12"
